Issue #3420059 by Rahaf Albawab: Fix overlap between the alert message and the close button in Media library Modal and improperly Grid and Table tabs styling

--- a/scss/theme/media_library.theme.scss
+++ b/scss/theme/media_library.theme.scss
@@ -28,8 +28,7 @@ body {
     .media-library-item--grid {
       max-width: 14rem !important;
       width: 14rem !important;
-      max-height: 14rem !important;
-      height: 14rem !important;
+      height: 100% !important;
     }
   }
 
