--- a/scss/theme/varbase_media.common_logged.scss
+++ b/scss/theme/varbase_media.common_logged.scss
@@ -718,6 +718,7 @@ html[dir="rtl"] form.media-form {
   width: 100%;
   max-width: 100% !important;
   z-index: 1;
+  word-break: break-word;
 }
 
 div[data-drupal-selector^="edit-inline-entity-form-field-media-gallery-current"] {
